# axm-genesis

./: .gitattributes  .gitignore  ALIGNMENT.md  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Makefile  PERIMETER-SWEEP.md  README.md  RELEASE.md  STREAM_FORMAT.md  conftest.py  index.html  pyproject.toml
.github/workflows/: ci.yml
archive/v0/: README.md  STREAM_FORMAT.md
archive/v0/gold/: CHECKSUMS.sha256
archive/v0/keys/: gold-v2-provisional.pub
archive/v0/vectors/: identity.json  merkle.json
archive/v0/vectors-shards/invalid/orphan_claim/: manifest.json
attestations/: README.md  gold-manifest.json  gold-manifest.json.ots  gold-manifest.tsq  gold-manifest.tsr  gold-v2-manifest.json  gold-v2-manifest.json.ots  gold-v2-manifest.tsq  gold-v2-manifest.tsr
docs/: ADOPTING.md  CARTRIDGE_LIFECYCLE.md  CONTINUITY.md  DURABILITY.md  ECOSYSTEM-WIRING.md  ERRATA.md  LOCALIZATION.md  REQ5_implementation_notes.md  RFC_FAMILY_DOCTRINE.md  RFC_TRAIN_RELEASE.md  THREE_LAYERS.md  TRAIN-2026-07.md
examples/: query_shard.py
generators/fm21_11/: README.md
generators/generators/fm21_11/: extract.py
keys/: README.md  canonical_publisher.pub
papers/: README.md  axm-genesis-kernel-v1.0-upgrade.md
rfcs/: 0001-post-quantum-suite.md  0002-lineage-self-reference.md  0002-v1-reset.md  0003-spec-v1-1-pinning-clarifications.md  0004-reseal-authorization.md  0005-attestation-shards.md  0006-custody-evidence-extensions.md  0007-chat-extensions.md  0008-sealed-runs.md  README.md
scripts/: extract_document.py  ingest_document.py
shards/gold/: CHECKSUMS.sha256  README.md
shards/gold/fm21-11-hemorrhage-v2/evidence/: spans.jsonl
shards/gold/fm21-11-hemorrhage-v2/graph/: claims.jsonl  entities.jsonl  provenance.jsonl
shards/gold/fm21-11-hemorrhage-v2/sig/: manifest.sig
spec/extensions/: lineage@1.md
spec/profiles/: embodied@1.md
spec/spec/v1.0/: CONFORMANCE.md  SPECIFICATION.md
spec/v1/: CONFORMANCE.md  SPECIFICATION.md
spec/v1.0/: CONFORMANCE.md  SPECIFICATION.md
spokes/axm-fleet/: README.md  demo.sh  pyproject.toml
spokes/axm-fleet/examples/: node-0042.deploy.json  node-0042.patch.json
spokes/axm-fleet/examples/artifacts/: provenance-r1.intoto.json  provenance-r2.intoto.json  sbom-r1.spdx.json  sbom-r2.spdx.json
spokes/axm-fleet/src/axm_fleet/: __init__.py  cli.py  record_compile.py  record_schema.py
spokes/axm-fleet/tests/: conftest.py  test_fleet_roundtrip.py
src/axm_build/: __init__.py  _stubs.py  cli.py  common.py  compiler_generic.py  ext_schemas.py  jsonl.py  manifest.py  merkle.py  schemas.py  sign.py
src/axm_extract/: api.py  cli.py
src/axm_extract/chunking/: docx_chunker.py  pdf_chunker.py  util.py
src/axm_extract/ingestion/: triage.py
src/axm_extract/models/: types.py
src/axm_genesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/axm_judge/: __init__.py  cli.py
src/axm_verify/: cli.py  const.py  crypto.py  identity.py  logic.py
src/axm_verify/profiles/: __init__.py  embodied_v1.py
templates/spoke-template/: README.md  pyproject.toml
templates/spoke-template/.github/workflows/: ci.yml  pages.yml
templates/spoke-template/src/axm_spoke_template/: __init__.py  cli.py  spoke.py
templates/spoke-template/tests/: test_roundtrip.py
templates/spoke-template/tests/fixtures/: sample.txt
tests/: conftest.py  helpers.py  test_compatibility_contract.py  test_compiler_extra_content.py  test_compiler_out_dir_guard.py  test_conformance.py  test_continuity.py  test_e2e.py  test_extensions.py  test_identity.py  test_jsonl.py  test_manifest.py  test_merkle.py  test_mldsa_backend_contract.py  test_pq_upgrade.py  test_profiles.py  test_rfc0006_custody_extensions.py  test_rfc0007_chat_extensions.py  test_security_regressions.py  test_sign.py  test_stream_judge.py  test_verifier.py
tests/keys/: README.md  ci_test_publisher.key
tests/vectors/: identity.json  merkle.json
tests/vectors/shards/: EXPECTED.md
tests/vectors/shards/invalid/bad_signature_ed25519_half/: README.md
tests/vectors/shards/security/: README.md
tools/: align-spoke.sh  bootstrap-pages.sh  ceremony.sh  doc-truth-sweep.sh  drift-check.sh  regen_expected.py
verifiers/go/: FINDINGS.md  README.md  go.mod  go.sum  run_conformance.sh
verifiers/go/cmd/axm-verify-go/: main.go
verifiers/go/internal/axm/: canonical.go  embodied.go  identity_test.go  ids.go  manifest.go  merkle.go  merkle_test.go  tables.go  verify.go
watershed/: README.md
watershed/ci/: watershed-check.js  watershed-verify-local.js
watershed/example/: axm.watershed.json
watershed/schema/: watershed.schema.json
watershed/test/: watershed-check.test.js  watershed-verify-local.test.js
(+66 files in other folders)
